Make project dir handling more consistent. Add fallbacks to locate the resource in ImageUtil and use commons-io to read the bytes.